--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
 <div class="balloon" style="left:50%; background:#40c4ff; animation-delay:4s;"></div>
 <div class="balloon" style="left:70%; background:#e040fb; animation-delay:1s;"></div>
 <div class="balloon" style="left:90%; background:#69f0ae; animation-delay:3s;"></div>
-
+<!-- deploy trigger -->
 </body>
+
 </html>
