--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     }
     /* 📱 Mobile Responsive */
 @media (max-width: 600px) {
+  
 
   body {
     padding: 20px;
@@ -92,6 +93,17 @@
     width: 100%;
     margin-bottom: 15px;
   }
+  .cake-3d {
+  transform: scale(0.9);
+}
+
+.cut-btn {
+  width: 100%;
+}
+
+.birthday-text {
+  font-size: 18px;
+}
 }
     /* 🎂 3D Cake Styling */
 .cake-3d-container {
@@ -338,8 +350,7 @@ function launchConfetti() {
 
 <h1>🎂 Happy 18th Birthday Suman Ji 🎂</h1>
 <p>23 December ✨</p>
-
-<a class="btn" href="wish1.html">See Special Wishes →</a>
+<a class="btn" href="final.html">See Special Wishes →</a>
 </div>
 <!-- 🎈 Balloons -->
 <div class="balloon" style="left:10%; background:#ff5252;"></div>
@@ -373,6 +384,7 @@ function launchConfetti() {
 </body>
 
 </html>
+
 
 
 
