--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@ function launchConfetti() {
     <!-- 🕯️ Candle -->
 <div class="candle">
   <div class="flame" id="flame"></div>
-  <div class="smoke" id="smoke" style="display:none;></div>
+  <div class="smoke" id="smoke" style="display:none;"></div>
 </div>
     <div class="layer top"></div>
     <div class="layer middle"></div>
@@ -384,6 +384,7 @@ function launchConfetti() {
 </body>
 
 </html>
+
 
 
 
