--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ function launchConfetti() {
 
 <h1>🎂 Happy 18th Birthday Suman Ji 🎂</h1>
 <p>23 December ✨</p>
-<a class="btn" href="final.html">See Special Wishes →</a>
+<a class="btn" href="wish1.html">See Special Wishes →</a>
 </div>
 <!-- 🎈 Balloons -->
 <div class="balloon" style="left:10%; background:#ff5252;"></div>
@@ -384,6 +384,7 @@ function launchConfetti() {
 </body>
 
 </html>
+
 
 
 
