--- a/wish3.html
+++ b/wish3.html
@@ -111,7 +111,7 @@ and success always 🌟<br><br>
 You are truly special 💐
 </p>
 
-<a href="index.html">← Back to Home</a>
+<a href="final.html" class="btn">Next  →</a>
 </div>
 <!-- 🎈 Balloons -->
 <div class="balloon" style="left:10%; background:#ff5252;"></div>
@@ -125,4 +125,5 @@ You are truly special 💐
   }, 1500);
 </script>
 </body>
+
 </html>
