--- a/final.html
+++ b/final.html
@@ -20,6 +20,23 @@
       font-size: 1.1rem;
       line-height: 1.8;
     }
+    /* 🏠 Back to Home Button Styling */
+    .back-btn {
+      display: inline-block;
+      margin-top: 50px;
+      padding: 12px 25px;
+      background: rgba(255, 255, 255, 0.2);
+      color: white;
+      text-decoration: none;
+      border-radius: 25px;
+      border: 1px solid white;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    .back-btn:hover {
+      background: white;
+      color: #a6c1ee;
+    }
   </style>
 </head>
 <body>
@@ -37,8 +54,7 @@ and keep smiling always 🌸
 — Your Brother 🫂
 </p>
 
-
-</div>
+<a href="index.html" class="back-btn">← Back to Home</a>
 
 </body>
 </html>
