--- a/index.html
+++ b/index.html
@@ -274,6 +274,294 @@
     opacity: 0;
   }
 }
+    <!DOCTYPE html>
+<html>
+<head>
+  <title>Final Wish</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    .content {
+  position: relative;
+  z-index: 2;
+  max-width: 500px;
+  margin: auto;
+}
+    .balloon {
+  position: fixed;
+  bottom: -120px;
+  width: 60px;
+  height: 80px;
+  border-radius: 50% 50% 50% 50%;
+  animation: floatUp 8s linear infinite;
+  opacity: 0.9;
+}
+
+.balloon::after {
+  content: '';
+  position: absolute;
+  width: 2px;
+  height: 40px;
+  background: rgba(0,0,0,0.2);
+  left: 50%;
+  top: 80px;
+}
+
+@keyframes floatUp {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-120vh);
+  }
+}
+    body {
+      font-family: Arial;
+      background: linear-gradient(120deg, #f6d365, #fda085);
+      color: #333;
+      text-align: center;
+      padding: 50px;
+    }
+    img {
+      width: 250px;
+      border-radius: 20px;
+      margin: 20px 0;
+    }
+    /* 📱 Mobile Responsive */
+@media (max-width: 600px) {
+
+  body {
+    padding: 20px;
+  }
+
+  h1 {
+    font-size: 1.8rem;
+  }
+
+  p {
+    font-size: 1rem;
+    line-height: 1.6;
+  }
+
+  img {
+    width: 90%;
+    max-width: 300px;
+  }
+
+  .btn {
+    display: inline-block;
+    width: 90%;
+    padding: 14px;
+    font-size: 1.1rem;
+  }
+
+  audio {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+}
+    <!DOCTYPE html>
+<html>
+<head>
+  <title>Final Wish</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    .content {
+  position: relative;
+  z-index: 2;
+  max-width: 500px;
+  margin: auto;
+}
+    .balloon {
+  position: fixed;
+  bottom: -120px;
+  width: 60px;
+  height: 80px;
+  border-radius: 50% 50% 50% 50%;
+  animation: floatUp 8s linear infinite;
+  opacity: 0.9;
+}
+
+.balloon::after {
+  content: '';
+  position: absolute;
+  width: 2px;
+  height: 40px;
+  background: rgba(0,0,0,0.2);
+  left: 50%;
+  top: 80px;
+}
+
+@keyframes floatUp {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-120vh);
+  }
+}
+    body {
+      font-family: Arial;
+      background: linear-gradient(120deg, #f6d365, #fda085);
+      color: #333;
+      text-align: center;
+      padding: 50px;
+    }
+    img {
+      width: 250px;
+      border-radius: 20px;
+      margin: 20px 0;
+    }
+    /* 📱 Mobile Responsive */
+@media (max-width: 600px) {
+
+  body {
+    padding: 20px;
+  }
+
+  h1 {
+    font-size: 1.8rem;
+  }
+
+  p {
+    font-size: 1rem;
+    line-height: 1.6;
+  }
+
+  img {
+    width: 90%;
+    max-width: 300px;
+  }
+
+  .btn {
+    display: inline-block;
+    width: 90%;
+    padding: 14px;
+    font-size: 1.1rem;
+  }
+
+  audio {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+}
+    /* 🌟 Page Fade In */
+body {
+  animation: pageFade 1.2s ease-in;
+}
+
+@keyframes pageFade {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+    /* 🖱️ Button Tap Effect */
+.btn:active,
+.cut-btn:active {
+  transform: scale(0.94);
+}
+  </style>
+</head>
+<body>
+    <!-- 🎵 Background Music -->
+<audio id="bgm" loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
+
+<script>
+document.addEventListener("click", () => {
+  const music = document.getElementById("bgm");
+  if (music.paused) {
+    music.volume = 0;
+    music.play();
+
+    let v = 0;
+    const fade = setInterval(() => {
+      if (v < 0.8) {
+        v += 0.05;
+        music.volume = v;
+      } else {
+        clearInterval(fade);
+      }
+    }, 200);
+  }
+}, { once: true });
+</script>
+<div class="content">
+<h1>🎉 Happy Birthday Suman Ji 🎉</h1>
+
+<img src="img3.jpg" alt="Memory 3">
+
+<p>
+Wishing you happiness, health,<br>
+and success always 🌟<br><br>
+You are truly special 💐
+</p>
+
+<a href="final.html" class="btn">Next  →</a>
+</div> 
+<!-- 🎈 Balloons -->
+<div class="balloon" style="left:10%; background:#ff5252;"></div>
+<div class="balloon" style="left:30%; background:#ffd54f; animation-delay:2s;"></div>
+<div class="balloon" style="left:50%; background:#40c4ff; animation-delay:4s;"></div>
+<div class="balloon" style="left:70%; background:#e040fb; animation-delay:1s;"></div>
+<div class="balloon" style="left:90%; background:#69f0ae; animation-delay:3s;"></div>
+<script>
+  setTimeout(() => {
+    alert("💖 Always stay happy, my sister 💖");
+  }, 1500);
+</script>
+</body>
+
+</html>
+  </style>
+</head>
+<body>
+    <!-- 🎵 Background Music -->
+<audio id="bgm" loop>
+  <source src="music.mp3" type="audio/mpeg">
+</audio>
+
+<script>
+  document.addEventListener("click", () => {
+    const music = document.getElementById("bgm");
+    if (music.paused) {
+      music.volume = 0.4;
+      music.play();
+    }
+  }, { once: true });
+</script>
+<div class="content">
+<h1>🎉 Happy Birthday Suman Ji 🎉</h1>
+
+<img src="img3.jpg" alt="Memory 3">
+
+<p>
+Wishing you happiness, health,<br>
+and success always 🌟<br><br>
+You are truly special 💐
+</p>
+
+<a href="final.html" class="btn">Next  →</a>
+</div>
+<!-- 🎈 Balloons -->
+<div class="balloon" style="left:10%; background:#ff5252;"></div>
+<div class="balloon" style="left:30%; background:#ffd54f; animation-delay:2s;"></div>
+<div class="balloon" style="left:50%; background:#40c4ff; animation-delay:4s;"></div>
+<div class="balloon" style="left:70%; background:#e040fb; animation-delay:1s;"></div>
+<div class="balloon" style="left:90%; background:#69f0ae; animation-delay:3s;"></div>
+<script>
+  setTimeout(() => {
+    alert("💖 Always stay happy, my sister 💖");
+  }, 1500);
+</script>
+</body>
+
+</html>
   </style>
 </head>  
 <body>
@@ -384,6 +672,7 @@ function launchConfetti() {
 </body>
 
 </html>
+
 
 
 
