--- a/wish3.html
+++ b/wish3.html
@@ -83,6 +83,29 @@
     margin-bottom: 15px;
   }
 }
+    /* ✨ Stylish Next Button */
+.next-btn {
+  display: inline-block;
+  margin-top: 25px;
+  padding: 14px 36px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
+  background: linear-gradient(135deg, #ff4081, #ff6f61);
+  border-radius: 30px;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+  transition: all 0.3s ease;
+}
+
+.next-btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 12px 28px rgba(0,0,0,0.35);
+}
+
+.next-btn:active {
+  transform: scale(0.95);
+}
   </style>
 </head>
 <body>
@@ -111,7 +134,9 @@ and success always 🌟<br><br>
 You are truly special 💐
 </p>
 
-<a href="final.html" class="btn">Next  →</a>
+<a href="final.html" class="next-btn">
+  Next ✨
+</a>
 </div>
 <!-- 🎈 Balloons -->
 <div class="balloon" style="left:10%; background:#ff5252;"></div>
@@ -127,3 +152,4 @@ You are truly special 💐
 </body>
 
 </html>
+
