--- a/wish2.html
+++ b/wish2.html
@@ -91,6 +91,30 @@
     margin-bottom: 15px;
   }
 }
+    /* 🚀 Wish2 Next Button */
+.next-btn-2 {
+  display: inline-block;
+  margin-top: 25px;
+  padding: 12px 34px;
+  font-size: 1.1rem;
+  text-decoration: none;
+  color: #fff;
+  border: 2px solid #40c4ff;
+  border-radius: 30px;
+  background: transparent;
+  box-shadow: 0 0 12px rgba(64,196,255,0.8);
+  transition: all 0.3s ease;
+}
+
+.next-btn-2:hover {
+  background: #40c4ff;
+  color: #333;
+  box-shadow: 0 0 22px rgba(64,196,255,1);
+}
+
+.next-btn-2:active {
+  transform: scale(0.95);
+}
   </style>
 </head>
 <body>
@@ -119,7 +143,9 @@ your smile brighter,<br>
 and your heart happier 💖
 </p>
 
-<a class="btn" href="wish3.html">Next →</a>
+<a href="wish3.html" class="next-btn-2">
+  Next 🚀
+</a>
 </div>
 <!-- 🎈 Balloons -->
 <div class="balloon" style="left:10%; background:#ff5252;"></div>
@@ -129,4 +155,5 @@ and your heart happier 💖
 <div class="balloon" style="left:90%; background:#69f0ae; animation-delay:3s;"></div>
 
 </body>
+
 </html>
